fixed spacing issue between text at >1260px screens

--- a/scss/components/_sub-menu-hover.scss
+++ b/scss/components/_sub-menu-hover.scss
@@ -55,7 +55,6 @@
                 
                 &--text {
                     position: relative;
-                    // padding: 1rem 0;
                     // border: 1px solid red;
                     
                     // text-styling
@@ -75,14 +74,14 @@
                         padding-left: 0;
                     }
                     
-                    // link seperator
+                    // link hyphen separator
                     &:not(:last-child) a::after {
                         content: "-";
                         padding-left: 1.5rem; //24px
                         
                         // Breakpoint @ 1260px
                         @media (min-width: 1260px) {
-                            padding-left: 34px;
+                            padding-left: 2.125rem; // 34px
                         }
                     }
                 }
